syntax = "proto3";

package razpravljalnica;

option go_package = "api/razpravljalnica/protobufDataPlane;razpravljalnica";

import "protobufStorage/protobufStorage.proto";

message UpdateRequest {
    int64 sequence_number = 1;
    razpravljalnica.OpType op = 2;
    razpravljalnica.Message message = 3;
}

message AcknowledgeResponse {
    int64 sequence_number = 1;
    bool success = 2;
}

service DataPlane {
    rpc ForwardUpdate(UpdateRequest) returns (AcknowledgeResponse); 
}